paper info update

--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
     </div>
 </section>
 <section>
-    <h2><i class="fa-solid fa-ranking-star"></i> Leaderboard (GUI + MCP)</h2>
+    <h2><i class="fa-solid fa-ranking-star"></i> Leaderboard (OSWorld-MCP)</h2>
     <!-- <p style="margin-top:5px;">
         We adopt state-of-the-art LLM and VLM from open-source representatives such as Agent-S, 
         Qwen and closed-source ones from GPT, Gemini, and Claude families on OSWorld-MCP, 
