paper info update

--- a/index.html
+++ b/index.html
@@ -318,8 +318,8 @@
     <header>
         <h1>OSWorld-MCP Benchmark Leaderboard</h1>
         <h2>OSWorld-MCP: Benchmarking MCP Tool Invocation in Computer-Use Agents</h2>
-        <p><strong>Authors:</strong> Hongrui Jia<sup>2,†</sup>, Jitong Liao<sup>1,†</sup>, Xi Zhang<sup>1,†</sup>, Haiyang Xu<sup>1,*</sup>, Tianbao Xie<sup>1</sup>, Chaoya Jiang<sup>2</sup>, Ming Yan<sup>1,*</sup>, Si Liu<sup>3</sup>, Wei Ye<sup>2</sup>, Fei Huang<sup>1</sup></p>
-        <p><strong>Affiliations:</strong> <sup>1</sup> Tongyi Lab, Alibaba Group · <sup>2</sup> Peking University · <sup>3</sup> Beijing Zhongguancun Academy</p>
+        <p><strong>Authors:</strong> Hongrui Jia<sup>1,2,†</sup>, Jitong Liao<sup>2,†</sup>, Xi Zhang<sup>2,†</sup>, Haiyang Xu<sup>2,*</sup>, Tianbao Xie<sup>2</sup>, Chaoya Jiang<sup>1</sup>, Ming Yan<sup>2,*</sup>, Si Liu<sup>3</sup>, Wei Ye<sup>1,*</sup>, Fei Huang<sup>2</sup></p>
+        <p><strong>Affiliations:</strong> <sup>1</sup> Peking University · <sup>2</sup> Tongyi Lab, Alibaba Group · <sup>3</sup> Beijing Zhongguancun Academy</p>
         <!-- <div class="icon-links">
             <a href="" target="_blank" title=" Read the Paper"><i class="fas fa-file-alt"></i></a>
             <a href="https://github.com/X-PLUG/OSWorld-MCP" target="_blank" title="View on GitHub"><i class="fab fa-github"></i></a>
